--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div class="col-lg-6 text-center float-col" data-aos="fade-left">
           <div class="hero-circle mx-auto float-anim">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\portfolio.jpeg" alt="">
+            <img src="./assets/portfolio.jpeg" alt="">
           </div>
 
           <!-- typing line under image -->
