--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h1 class="lg-title text-white">Hi — I'm <span id="yourName" class="text-white">PREETHI SANKAR</span></h1>
             <p class="mt-3 text-white/80 max-w-xl">I am a web developer committed to crafting modern, responsive, and high-quality digital experiences.
             <div class="mt-6 d-flex gap-3 flex-wrap">
-              <a class="cta-primary" href="C:\Users\JEEVA\Desktop\portfolio\assets\PREETHI S-1.pdf">Download CV</a>
+              <a class="cta-primary" href="/.assets/PREETHI S-1.pdf">Download CV</a>
               <a class="text-white/90 px-4 py-2 rounded hover:bg-white/8 glass" href="#contact">Contact</a>
             </div>
           </div>
