--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h1 class="lg-title text-white">Hi — I'm <span id="yourName" class="text-white">PREETHI SANKAR</span></h1>
             <p class="mt-3 text-white/80 max-w-xl">I am a web developer committed to crafting modern, responsive, and high-quality digital experiences.
             <div class="mt-6 d-flex gap-3 flex-wrap">
-              <a class="cta-primary" href="/.assets/PREETHI S-1.pdf">Download CV</a>
+              <a class="cta-primary" href="./assets/PREETHI S-1.pdf">Download CV</a>
               <a class="text-white/90 px-4 py-2 rounded hover:bg-white/8 glass" href="#contact">Contact</a>
             </div>
           </div>
@@ -124,7 +124,7 @@
 
         <div class="col-lg-6 text-center float-col" data-aos="fade-left">
           <div class="hero-circle mx-auto float-anim">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\portfolio.jpeg" alt="">
+            <img src="./assets/portfolio.jpeg" alt="">
           </div>
 
           <!-- typing line under image -->
@@ -227,37 +227,37 @@
       <div class="row g-4">
         <div class="col-md-4" data-aos="fade-up">
           <div class="project-card glass p-3">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\port.png" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
+            <img src="./assets/port.png" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
           </div>
         </div>
 
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="80">
           <div class="project-card glass p-3">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\qr.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
+            <img src="./assets/qr.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
           </div>
         </div>
 
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="160">
           <div class="project-card glass p-3">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\dash.png" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
+            <img src="./assets/dash.png" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
           </div>
         </div>
 
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="160">
           <div class="project-card glass p-3">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\finance.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
+            <img src="./assets/finance.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
           </div>
         </div>
 
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="160">
           <div class="project-card glass p-3">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\tea.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
+            <img src="./assets/tea.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
           </div>
         </div>
 
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="160">
           <div class="project-card glass p-3">
-            <img src="C:\Users\JEEVA\Desktop\portfolio\assets\admin.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
+            <img src="./assets/admin.jpeg" alt="project" class="w-full rounded mb-3" style="height:180px; object-fit:cover;">
           </div>
         </div>
       </div>
